@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Em1RunAction.cc,v 1.3 1999-12-15 14:48:57 gunter Exp $
+// $Id: Em1RunAction.cc,v 1.4 2000-01-21 12:29:26 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -23,14 +23,20 @@
 #include "g4std/iomanip"
 
 #include "Randomize.hh"
-#include "CLHEP/Hist/HBookFile.h"
+
+#ifndef G4NOHIST
+ #include "CLHEP/Hist/HBookFile.h"
+#endif
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
 Em1RunAction::Em1RunAction()
-:hbookManager(NULL)
 {runMessenger = new Em1RunActionMessenger(this);
  saveRndm = 1;
+ 
+#ifndef G4NOHIST
+ hbookManager = NULL;
+#endif 
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
@@ -44,20 +50,24 @@ Em1RunAction::~Em1RunAction()
 
 void Em1RunAction::bookHisto()
 {
+#ifndef G4NOHIST
   hbookManager = new HBookFile("testem1.histo", 68);
 
   // booking histograms
   histo[0] = hbookManager->histogram("track length (mm) of a charged particle",100,0.,50*cm);
   histo[1] = hbookManager->histogram("Nb of steps per track (charged particle)",100,0.,100.);
   histo[2] = hbookManager->histogram("step length (mm) charged particle",100,0.,10*mm);
+#endif   
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
 void Em1RunAction::cleanHisto()
 {
+#ifndef G4NOHIST
   delete [] histo;
   delete hbookManager;
+#endif   
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
@@ -138,15 +148,17 @@ void Em1RunAction::EndOfRunAction(const G4Run* aRun)
   //draw the events
   if (G4VVisManager::GetConcreteInstance()) 
      G4UImanager::GetUIpointer()->ApplyCommand("/vis/viewer/update");
-     
-  // writing histogram file
-  hbookManager->write();
-  
+
   // save Rndm status
   if (saveRndm == 1)
     { HepRandom::showEngineStatus();
       HepRandom::saveEngineStatus("endOfRun.rndm");
-    }         
+    }
+    
+#ifndef G4NOHIST     
+  // writing histogram file
+  hbookManager->write();
+#endif               
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
