@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Em1SteppingAction.cc,v 1.2 1999-12-15 14:48:57 gunter Exp $
+// $Id: Em1SteppingAction.cc,v 1.3 2000-01-21 12:29:26 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -19,7 +19,9 @@
 #include "G4SteppingManager.hh"
 #include "G4VProcess.hh"
 
-#include "CLHEP/Hist/HBookFile.h"
+#ifndef G4NOHIST
+ #include "CLHEP/Hist/HBookFile.h"
+#endif
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
@@ -44,7 +46,10 @@ void Em1SteppingAction::UserSteppingAction(const G4Step* aStep)
  
  G4double charge  = aStep->GetTrack()->GetDefinition()->GetPDGCharge();
  G4double steplen = aStep->GetStepLength();
- if (charge != 0.) runAction->GetHisto(2)->accumulate(steplen);                   
+ 
+#ifndef G4NOHIST 
+ if (charge != 0.) runAction->GetHisto(2)->accumulate(steplen);
+#endif                    
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
